--- a/src/Home.css
+++ b/src/Home.css
@@ -4,17 +4,17 @@ li{
 }
 
 
-#nav-bar
+#hnav-bar
 {
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
     padding: 0 40px;
     background-color:rgb(244, 238, 223);
 
 
 }
 
-.link
+.hlink
 {
     width: 120px;
     height: 40px;
@@ -26,7 +26,7 @@ li{
    
 
 }
-#links
+#hlinks
 {
     display: flex;
  
@@ -46,4 +46,102 @@ p{
 }
 h2{
     padding-top: 100px;
+}
+
+
+@media  (max-width:600px)
+{
+    #pprofile{
+        display:block;
+        box-sizing: border-box;
+        width: 100vw;
+    }
+    #hlinks
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+
+    }
+
+    #hhead
+    {
+        display: block;
+    }
+    #hnav-bar
+    {
+        display: block;
+    }
+
+.inlinelink
+{
+    font-size: 18px;
+}
+    #phead
+{
+    font-size: 50px;
+}
+
+
+
+
+
+
+
+
+}
+
+@media screen and (min-width: 600px) and (max-width: 750px) {
+    #dprofile
+    {
+        display: grid;
+        grid-template-rows: 1fr 1fr ;
+        grid-template-columns: 1fr 1fr ;
+        width: 100vw;
+    }
+    #plinks
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+    }
+    #hnav-bar
+    {
+        display: flex;
+       justify-content: space-between;
+    }
+    #hhead
+    {
+        display: flex;
+    }
+
+}
+@media screen and (min-width: 750px)  {
+    #pprofile
+    {
+        display: grid;
+        width: 100vw;
+        grid-template-rows: 1fr 1fr 1fr ;
+        grid-template-columns: 1fr 1fr 1fr ;
+    
+    }
+    #hnav-bar
+    {
+        display: flex;
+        justify-content: space-between;
+    }
+    #hhead
+    {
+        display: flex;
+    }
+    #plinks
+    {
+        margin-right: 20px;
+        margin:auto;
+    }
+   
 }
