--- a/src/myprofile.css
+++ b/src/myprofile.css
@@ -1,7 +1,7 @@
 
 body
 {
-    background-color: rgb(141, 210, 248);
+    background-color: rgb(248, 222, 222);
 }
 
 
@@ -9,9 +9,9 @@ h1{
     margin-top: 40px;
  
 }
-#head
+#phead
 {
-    font-size: 100px;
+    font-size: 80px;
 }
 
 .plink
@@ -32,17 +32,19 @@ h1{
     margin-left: 470px;
     color: aliceblue;
     display: flex;
+    justify-content: center;
  
-
+    margin:auto;
 }
 
 .pprofile
 {
-  
+  width: 300px;
     border: 2px solid black;
     margin: 20px;
     border-radius: 20px;
-    background-color: rgb(242, 193, 129);
+    background-color: rgb(160, 3, 3);
+    color: white;
     width: 200px;
     margin: 50px auto ;
 }
@@ -53,5 +55,77 @@ h1{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin: 80px;
 
+}
 
+.inlinelink
+{
+    font-size: 20px;
+}
+
+
+
+
+
+@media  (max-width:530px)
+{
+    #pprofile{
+        display:block;
+        box-sizing: border-box;
+        width: 100vw;
+    }
+    #plinks
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+        
+    }
+
+.inlinelink
+{
+    font-size: 18px;
+}
+    #phead
+{
+    font-size: 50px;
+}
+
+
+}
+
+@media screen and (min-width: 530px) and (max-width: 750px) {
+    #dprofile
+    {
+        display: grid;
+        grid-template-rows: 1fr 1fr ;
+        grid-template-columns: 1fr 1fr ;
+        width: 100vw;
+    }
+    #plinks
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+    }
+
+}
+@media screen and (min-width: 750px) and (max-width: 850px) {
+    #pprofile
+    {
+        display: grid;
+        width: 100vw;
+        grid-template-rows: 1fr 1fr 1fr ;
+        grid-template-columns: 1fr 1fr 1fr ;
+    
+    }
+    #plinks
+    {
+        margin-right: 20px;
+        margin:auto;
+    }
+   
 }
