--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,15 +1,12 @@
 
-body
-{
-    background-color: rgb(244, 194, 194);
-}
+
 .App
 {
     width: 100%;
 }
 
 h1{
-    margin-top: 40px;
+    margin-top: 10px;
  
 }
 #dhead
@@ -41,12 +38,12 @@ h1{
 
 .dprofile
 {
-    color: white;
+    color: rgb(177, 213, 244);
     width:300px;
-    border: 2px solid black;
-    margin: 20px;
+   
     border-radius: 20px;
-    background-color: rgb(160, 3, 3);
+    box-shadow: 8px 8px 18px black;
+    background-color:  rgba(37, 18, 112, 0.89);
 }
 #dcont
 {
@@ -55,16 +52,22 @@ h1{
     width: 100vw;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 20px;
-
+   
+  grid-gap: 40px;
 
 }
 @media  (max-width:530px)
 {
+    
+    .dprofile{
+        margin: auto;
+    }
     #dcont{
+       
         display:block;
         box-sizing: border-box;
         width: 100vw;
+       
     }
     #dlinks
     {
@@ -85,10 +88,14 @@ h1{
 @media screen and (min-width: 530px) and (max-width: 750px) {
     #dcont
     {
+        margin-top: 30px;
         display: grid;
         grid-template-rows: 1fr 1fr ;
         grid-template-columns: 1fr 1fr ;
         width: 100vw;
+    }
+    .dprofile{
+        margin: auto;
     }
     #dlinks
     {
@@ -99,14 +106,19 @@ h1{
     }
 
 }
-@media screen and (min-width: 750px) and (max-width: 850px) {
+@media screen and (min-width: 750px)  {
     #dcont
     {
+        margin: auto;
+        margin-top: 30px;
         display: grid;
         width: 100vw;
         grid-template-rows: 1fr 1fr 1fr ;
-        grid-template-columns: 1fr 1fr 1fr ;
+        grid-template-columns: 1fr 1fr 1fr 1fr ;
     
+    }
+    .dprofile{
+        margin: auto;
     }
     #dlinks
     {
