--- a/src/login.css
+++ b/src/login.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0 40px;
-    background-color:rgb(244, 238, 223);
+   
 
 
 }
@@ -41,20 +41,20 @@ p{
     line-height: 50px;
     margin-bottom: 20px;
     border-radius: 20px;
-    background-color: rgb(240, 118, 70);
+    background-color: rgba(37, 18, 112, 0.89);
     box-shadow: 1px 6px 15px rgb(38, 31, 12);
     border: 0;
 }
 input{
     height: 30px;
     width: 200px;
-    border-radius: 10px;
+    border-radius: 5px;
     border: 0;
 }
 #maincont
 {
     padding-top: 50px;
-    background-color: aliceblue;
+
     height: 100vh;
    
 }
@@ -65,7 +65,8 @@ input{
 {
     width: 120px;
     height: 35px;
-    background-color: rgb(109, 252, 109);
+    border-radius: 10px;
+    background-color: rgb(187, 210, 255);
     box-shadow: 1px 3px 8px rgb(38, 31, 12);
     color: black;
 }
