--- a/src/myprofile.css
+++ b/src/myprofile.css
@@ -1,8 +1,5 @@
 
-body
-{
-    background-color: rgb(248, 222, 222);
-}
+
 
 
 h1{
@@ -43,7 +40,7 @@ h1{
     border: 2px solid black;
     margin: 20px;
     border-radius: 20px;
-    background-color: rgb(160, 3, 3);
+    background-color: rgba(37, 18, 112, 0.89);
     color: white;
     width: 200px;
     margin: 50px auto ;
