--- a/src/myprofile.css
+++ b/src/myprofile.css
@@ -14,7 +14,7 @@ h1{
 .plink
 {
     width: 220px;
-    height: 40px;
+ padding: 10px;
     background-color: rgb(80, 82, 242);
     border-radius: 20px;
    /* border: 2px solid black; */
@@ -57,6 +57,10 @@ h1{
 .inlinelink
 {
     font-size: 20px;
+    padding: 5px;
+    font-weight:600;
+   font-family: cursive;
+
 }
 
 
@@ -70,6 +74,7 @@ h1{
         box-sizing: border-box;
         width: 100vw;
     }
+  
     #plinks
     {
         display: flex;
@@ -82,7 +87,7 @@ h1{
 
 .inlinelink
 {
-    font-size: 18px;
+    font-size: 16px;
 }
     #phead
 {
