--- a/src/Home.css
+++ b/src/Home.css
@@ -38,7 +38,7 @@ body{
 .headcolor
 {
     color: rgb(18, 18, 112);
-    font-family:cursive
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 h2{
@@ -54,7 +54,7 @@ h2{
 {
     padding: 5px;
     font-weight:600;
-   font-family: cursive;
+   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .hfont{
     font-size:25px;
@@ -88,7 +88,23 @@ h2{
 {
     margin-top: 150px;
 }
-@media  (max-width:600px)
+
+@media screen and    (max-width :320px) {
+    body{
+    
+        background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
+        background-position: center 42px;
+        background-color: aliceblue;
+    }
+}
+
+
+
+
+
+
+
+@media screen and (min-width: 320px) and (max-width:600px)
 {
    
 
@@ -139,6 +155,12 @@ h2{
     margin: 50px;
 }
 
+body{
+    
+    background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
+    background-position: center -11px;
+    background-color: aliceblue;
+}
 
 
 
@@ -172,6 +194,12 @@ h2{
         display: flex;
         margin-top: 25px;
     }
+    body{
+    
+        background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
+        background-position: center -24px;
+        background-color: aliceblue;
+    }
 
 }
 @media screen and (min-width: 750px)  {
@@ -201,7 +229,7 @@ h2{
     body{
     
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-        background-position: center -49px;
+        background-position: center -66px;
         background-color: aliceblue;
     }
    
