--- a/src/Home.css
+++ b/src/Home.css
@@ -37,6 +37,9 @@ body{
 }
 .headcolor
 {
+  font-size: 40px;
+    letter-spacing: 3px;
+word-spacing: 7px;
     color: rgb(18, 18, 112);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -93,18 +96,26 @@ h2{
     body{
     
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-        background-position: center 42px;
+        background-position: center 61px;
         background-color: aliceblue;
     }
 }
 
 
+@media screen and (min-width:320px) and (max-width:430) {
+
+    body {
+        background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
+        background-position: center 00px;
+        background-color: aliceblue;
+    };
+
+}
 
 
 
 
-
-@media screen and (min-width: 320px) and (max-width:600px)
+@media screen and (min-width: 430px) and (max-width:600px)
 {
    
 
@@ -158,7 +169,7 @@ h2{
 body{
     
     background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-    background-position: center -11px;
+    background-position: center 0px;
     background-color: aliceblue;
 }
 
@@ -197,7 +208,7 @@ body{
     body{
     
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-        background-position: center -24px;
+        background-position: center -3px;
         background-color: aliceblue;
     }
 
@@ -220,6 +231,9 @@ body{
     {
         display: flex;
         margin-top: 25px;
+     
+      
+        height: 30px;
     }
     #plinks
     {
@@ -229,7 +243,7 @@ body{
     body{
     
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-        background-position: center -66px;
+        background-position: center -79px;
         background-color: aliceblue;
     }
    
