--- a/src/Home.css
+++ b/src/Home.css
@@ -38,8 +38,7 @@ body{
 .headcolor
 {
   font-size: 40px;
-    letter-spacing: 3px;
-word-spacing: 7px;
+
     color: rgb(18, 18, 112);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -92,23 +91,23 @@ h2{
     margin-top: 150px;
 }
 
-@media screen and    (max-width :320px) {
+@media screen  and  (max-width :320px) {
     body{
     
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-        background-position: center 61px;
+        background-position: center 25px;
         background-color: aliceblue;
     }
 }
 
 
-@media screen and (min-width:320px) and (max-width:430) {
+@media screen and (min-width:320px) and (max-width:430px) {
 
     body {
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-        background-position: center 00px;
+        background-position: center 35px;
         background-color: aliceblue;
-    };
+    }
 
 }
 
@@ -169,7 +168,7 @@ h2{
 body{
     
     background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
-    background-position: center 0px;
+    background-position: center 10px;
     background-color: aliceblue;
 }
 
