--- a/src/Home.css
+++ b/src/Home.css
@@ -92,6 +92,50 @@ h2{
 }
 
 @media screen  and  (max-width :320px) {
+    #pprofile{
+        display:block;
+        box-sizing: border-box;
+        width: 100vw;
+    }
+    #hlinks
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+
+    }
+
+    #hhead
+    {
+        display: block;
+    
+    }
+    #hnav-bar
+    {
+        display: block;
+    }
+
+.inlinelink
+{
+    font-size: 18px;
+}
+    #phead
+{
+    font-size: 50px;
+}
+
+.hfont
+{
+    font-size: 18px;
+}
+.pfont{
+    font-size: 20px;
+    padding: 30px;
+    margin: 50px;
+}
+
     body{
     
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
@@ -102,6 +146,49 @@ h2{
 
 
 @media screen and (min-width:320px) and (max-width:430px) {
+    #pprofile{
+        display:block;
+        box-sizing: border-box;
+        width: 100vw;
+    }
+    #hlinks
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        margin:auto;
+
+    }
+
+    #hhead
+    {
+        display: block;
+    
+    }
+    #hnav-bar
+    {
+        display: block;
+    }
+
+.inlinelink
+{
+    font-size: 18px;
+}
+    #phead
+{
+    font-size: 50px;
+}
+
+.hfont
+{
+    font-size: 18px;
+}
+.pfont{
+    font-size: 20px;
+    padding: 30px;
+    margin: 50px;
+}
 
     body {
         background-image:url('https://www.tensorflow.org/static/site-assets/images/marketing/learn/learn-lite-hero.svg');
